--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -15,8 +15,8 @@
         android:background="@color/white">
         <ImageButton
             android:id="@+id/profile_picture"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="290dp"
+            android:layout_height="290dp"
             android:layout_centerHorizontal="true"
             android:src="@drawable/app_logo"
             android:background="@android:color/transparent"/>
